<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="410dp"
        android:layout_height="739dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:text="@string/appTitle"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextHere"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_edit_text"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextHereSql"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint2_edit_text"
            android:inputType="number" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <Button
                android:id="@+id/btnSharedPrefWrite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#EF7070"
                android:onClick="WriteSharedPref"
                android:text="@string/write_shared_pref" />

            <Button
                android:id="@+id/btnSharedPrefRead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#EF7070"
                android:onClick="ReadSharedPref"
                android:text="@string/read_shared_pref" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <Button
                android:id="@+id/btnInternalWrite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#F66A28"
                android:onClick="WriteInternal"
                android:text="@string/write_internal" />

            <Button
                android:id="@+id/btnInternalRead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#F66A28"
                android:onClick="ReadInternal"
                android:text="@string/read_internal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <Button
                android:id="@+id/btnExternalWrite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#086309"
                android:onClick="WriteExternal"
                android:text="@string/write_external" />

            <Button
                android:id="@+id/btnExternalRead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#086309"
                android:onClick="ReadExternal"
                android:text="@string/read_external" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <Button
                android:id="@+id/btnSqlWrite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#410A43"
                android:onClick="WriteSql"
                android:text="@string/write_sql" />

            <Button
                android:id="@+id/btnSqlRead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#410A43"
                android:onClick="ReadSql"
                android:text="@string/read_sql" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSqlUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#410A43"
                android:onClick="UpdateSql"
                android:text="@string/update_sql" />

            <Button
                android:id="@+id/btnSqlDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#410A43"
                android:onClick="DeleteSql"
                android:text="@string/delete_sql" />

        </LinearLayout>

        <TextView
            android:id="@+id/textViewShredPref"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/text_shared_preference" />

        <TextView
            android:id="@+id/textViewInternal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/text_internal" />

        <TextView
            android:id="@+id/textViewExternal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/text_external" />

        <TextView
            android:id="@+id/textViewSQL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/text_sql" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>